# qqbot

yw_bot/: .env.prod  README.md  pyproject.toml
yw_bot/data/learning_chat/: learning_chat.db  learning_chat.db-shm  learning_chat.db-wal  learning_chat.yml
yw_bot/nonebot_plugin_test/: __init__.py
