[project]
name = "test"
version = "0.1.0"
description = "test"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_test", "nonebot_plugin_learning_chat", "nonebot_plugin_with_ai_agents"]
plugin_dirs = []
builtin_plugins = ["echo"]
